few more scenarios