@@ -1,10 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.terracotta.labs</groupId>
-	<artifactId>lab5</artifactId>
+	<groupId>labs</groupId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Lab5-Locking test</name>
+	<artifactId>terracotta</artifactId>
+	<name>Terracotta labs</name>
+	<description>sample/tutorial guide to learning BM</description>
 
 	<repositories>
 		<repository>
@@ -12,6 +13,17 @@
 			<url>http://www.terracotta.org/download/reflector/releases</url>
 		</repository>
 	</repositories>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>src/test/java</directory>
+				<includes>
+					<include>**/*.xml</include>
+				</includes>
+			</resource>
+		</resources>
+	</build>
 	<dependencies>
 		<dependency>
 			<groupId>net.sf.ehcache</groupId>
@@ -21,56 +33,33 @@
 		<dependency>
 			<groupId>org.terracotta</groupId>
 			<artifactId>terracotta-toolkit-runtime-ee</artifactId>
-			<version>4.0.0</version>
+			<version>${terracotta.toolkit.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.0</version>
+			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-simple</artifactId>
 			<version>${slf4j.version}</version>
-			<scope>test</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>exec-maven-plugin</artifactId>
-				<version>1.2</version>
-				<configuration>
-					<executable>java</executable>
-					<arguments>
-						<!-- <argument>-verbose:gc</argument> <argument>-XX:+PrintGCDetails</argument> 
-							<argument>-Xloggc:${basedir}/target/verbose-gc.log</argument> <argument>-Xms${min.heap}</argument> 
-							<argument>-Xmx${max.heap}</argument> <argument>-Dthreads=${threads}</argument> 
-							<argument>-DwarmupThreads=${threads}</argument> <argument>-Dehcache.clustered=false</argument> -->
-						<argument>-Dcom.tc.productkey.path=terracotta-license.key</argument>
-						<argument>-XX:MaxDirectMemorySize=${maxDirectMemorySize}</argument>
-						<argument>-Xms${min.heap}</argument>
-						<argument>-Xmx${max.heap}</argument>
-						<argument>-classpath</argument>
-						<classpath />
-						<argument>org.terracotta.demo.basic.app.PutAndGet</argument>
-					</arguments>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 	<properties>
 		<!-- library versions -->
 		<ehcache.ee.version>2.7.0</ehcache.ee.version>
 		<ehcache.version>2.6.5</ehcache.version>
 		<slf4j.version>1.6.6</slf4j.version>
+		<terracotta.toolkit.version>4.0.0</terracotta.toolkit.version>
+		<junit.version>4.0</junit.version>
 		<!-- JVM settings -->
 		<maxDirectMemorySize>4g</maxDirectMemorySize>
 		<min.heap>1g</min.heap>
 		<max.heap>1g</max.heap>
 	</properties>
+
 
 </project>
